--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,9 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
 }
+tasks.withType(JavaCompile) {
+	options.compilerArgs << '-parameters'
+}
+
